--- a/portfolio1/package.json
+++ b/portfolio1/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "contentful": "^10.6.17",
     "jsx": "^0.9.89",
     "react-dom": "^18.2.0",
     "three": "^0.160.0"
